crates/djls-semantic/tests/snapshots/corpus__repos__django-cms__cms__templatetags__cms_tags.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "cms.templatetags.cms_tags::tag::render_extra_menu_items":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: obj
        required: true
        kind: Variable
        position: 0
      - name: template
        required: false
        kind: Variable
        position: 1
    as_var: strip
  "cms.templatetags.cms_tags::tag::render_plugin":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: plugin
        required: true
        kind: Variable
        position: 0
    as_var: strip
  "cms.templatetags.cms_tags::tag::show_placeholder":
    arg_constraints:
      - Min: 4
      - Max: 7
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: context
        required: true
        kind: Variable
        position: 0
      - name: placeholder_name
        required: true
        kind: Variable
        position: 1
      - name: reverse_id
        required: true
        kind: Variable
        position: 2
      - name: lang
        required: false
        kind: Variable
        position: 3
      - name: site
        required: false
        kind: Variable
        position: 4
      - name: use_cache
        required: false
        kind: Variable
        position: 5
    as_var: strip
  "cms.templatetags.cms_tags::tag::show_placeholder_by_id":
    arg_constraints:
      - Min: 4
      - Max: 7
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: context
        required: true
        kind: Variable
        position: 0
      - name: placeholder_name
        required: true
        kind: Variable
        position: 1
      - name: reverse_id
        required: true
        kind: Variable
        position: 2
      - name: lang
        required: false
        kind: Variable
        position: 3
      - name: site
        required: false
        kind: Variable
        position: 4
      - name: use_cache
        required: false
        kind: Variable
        position: 5
    as_var: strip
  "cms.templatetags.cms_tags::tag::show_uncached_placeholder":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: context
        required: true
        kind: Variable
        position: 0
      - name: args
        required: false
        kind: VarArgs
        position: 1
    as_var: strip
  "cms.templatetags.cms_tags::tag::show_uncached_placeholder_by_id":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: context
        required: true
        kind: Variable
        position: 0
      - name: args
        required: false
        kind: VarArgs
        position: 1
    as_var: strip
filter_arities: {}
block_specs: {}
